[package]
name = "simulation-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
csv = "1.3.1"
env_logger = "0.11.8"
log = "0.4.27"
rand = { version = "0.9.1", features = ["std_rng"] }
rayon = "1.10.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
zerocopy = "0.8.24"
