[workspace]
members = [
    ".",  # Root crate (simulation-engine)
    "simulation-common",
    "simulation-visualizer"
]

[package]
name = "simulation-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use the shared common library
simulation-common = { path = "./simulation-common" } # Fixed path

# Dependencies specific to the simulation engine
anyhow = "1.0.98"
bincode = "1.3.3"
csv = "1.3.1"
env_logger = "0.11.8"
log = "0.4.27"
rand = { version = "0.9.1", features = ["std_rng"] }
rand_distr = "0.5.1"
rayon = "1.10.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zerocopy = "0.8.25"
