[package]
name = "simulation-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared data structures
simulation-common = { path = "../simulation-common" }

# Error handling
anyhow = "1.0.98"

# Argument parsing
clap = { version = "4.5.37", features = ["derive"] }

# Logging
log = "0.4.27"
env_logger = "0.11.8"

# Data deserialization
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }

# Image processing
image = "0.25.6"
imageproc = "0.25.0"
ab_glyph = "0.2.29"

# Video encoding
openh264 = "0.8.1"
minimp4 = "0.1.2"

# Color definitions
palette = "0.7.6"
rayon = "1.10.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
dashmap = { version = "6.1.0", features = ["rayon"] }
rand = "0.9.1"
